Add Product details

--- a/Front-End-Angular/src/assets/css/style.css
+++ b/Front-End-Angular/src/assets/css/style.css
@@ -1047,14 +1047,14 @@ ol {
 
 .breadcrumb__text h2 {
 	font-size: 46px;
-	color: #ffffff;
+	color: Black;
 	font-weight: 700;
 }
 
 .breadcrumb__option a {
 	display: inline-block;
 	font-size: 16px;
-	color: #ffffff;
+	color: black;
 	font-weight: 700;
 	margin-right: 20px;
 	position: relative;
@@ -1073,7 +1073,7 @@ ol {
 .breadcrumb__option span {
 	display: inline-block;
 	font-size: 16px;
-	color: #ffffff;
+	color: Black;
 }
 
 /*---------------------
