--- a/Front-End-Angular/src/styles.css
+++ b/Front-End-Angular/src/styles.css
@@ -1,12 +1,15 @@
 @import url(bootstrap/dist/css/bootstrap.min.css);
 @import "@fortawesome/fontawesome-free/css/all.min.css";
+@import "bootstrap/dist/css/bootstrap.min.css";
+
+@import 'assets/css/font-awesome.min.css';
 
 
-.login-container {
-  width: 800px !important;
-  margin-top: 15%;
-}
+/*.login-container {*/
+/*  width: 800px !important;*/
+/*  margin-top: 15%;*/
+/*}*/
 
-.cursor-pointer {
-  cursor: pointer;
-}
+/*.cursor-pointer {*/
+/*  cursor: pointer;*/
+/*}*/
