--- a/Front-End-Angular/src/app/module/shoping-cart/shoping-cart.component.html
+++ b/Front-End-Angular/src/app/module/shoping-cart/shoping-cart.component.html
@@ -33,7 +33,7 @@
   </div>
   <nav class="humberger__menu__nav mobile-menu">
     <ul>
-      <li class="active"><a routerLink="/home">Home</a></li>
+      <li class="active"><a href="./index.html">Home</a></li>
       <li><a href="./shop-grid.html">Shop</a></li>
       <li><a href="#">Pages</a>
         <ul class="header__menu__dropdown">
@@ -47,7 +47,13 @@
       <li><a href="./contact.html">Contact</a></li>
     </ul>
   </nav>
-
+  <div id="mobile-menu-wrap"></div>
+  <div class="header__top__right__social">
+<!--    <a href="#"><i class="fa fa-facebook"></i></a>-->
+<!--    <a href="#"><i class="fa fa-twitter"></i></a>-->
+<!--    <a href="#"><i class="fa fa-linkedin"></i></a>-->
+<!--    <a href="#"><i class="fa fa-pinterest-p"></i></a>-->
+  </div>
   <div class="humberger__menu__contact">
     <ul>
       <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
@@ -62,7 +68,7 @@
   <div class="header__top">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6">
           <div class="header__top__left">
             <ul>
               <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
@@ -70,8 +76,14 @@
             </ul>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6">
           <div class="header__top__right">
+            <div class="header__top__right__social">
+<!--              <a href="#"><i class="fa fa-facebook"></i></a>-->
+<!--              <a href="#"><i class="fa fa-twitter"></i></a>-->
+<!--              <a href="#"><i class="fa fa-linkedin"></i></a>-->
+<!--              <a href="#"><i class="fa fa-pinterest-p"></i></a>-->
+            </div>
             <div class="header__top__right__language">
               <img src="assets/img/language.png" alt="">
               <div>English</div>
@@ -82,25 +94,8 @@
               </ul>
             </div>
             <div class="header__top__right__auth">
-              <ul class="nav">
-                <li class="nav-item">
-                  <a class="nav-link" [routerLink]="['profile']" (click)="goToProfile()">
-                    <i class="fa fa-user"></i> Profile
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" [routerLink]="['/orders']">
-                    <i class="fa fa-shopping-bag"></i> My Orders
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" (click)="logout()">
-                    <i class="fa fa-sign-out"></i> Logout
-                  </a>
-                </li>
-              </ul>
+              <a href="#"><i class="fa fa-user"></i> Login</a>
             </div>
-
           </div>
         </div>
       </div>
@@ -116,8 +111,8 @@
       <div class="col-lg-6">
         <nav class="header__menu">
           <ul>
-            <li class="active"><a href="./index.html">Home</a></li>
-            <li><a href="./shop-grid.html">Shop</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li class="active"><a href="./shop-grid.html">Shop</a></li>
             <li><a href="#">Pages</a>
               <ul class="header__menu__dropdown">
                 <li><a href="./shop-details.html">Shop Details</a></li>
@@ -149,16 +144,16 @@
 <!-- Header Section End -->
 
 <!-- Hero Section Begin -->
-<section class="hero">
+<section class="hero hero-normal">
   <div class="container">
     <div class="row">
       <div class="col-lg-3">
         <div class="hero__categories">
-          <div class="hero__categories__all" (click)="toggleCategories()">
+          <div class="hero__categories__all">
             <i class="fa fa-bars"></i>
             <span>All departments</span>
           </div>
-          <ul [ngClass]="{'active': isCategoriesVisible}">
+          <ul>
             <li><a href="#">Fresh Meat</a></li>
             <li><a href="#">Vegetables</a></li>
             <li><a href="#">Fruit & Nut Gifts</a></li>
@@ -195,104 +190,151 @@
             </div>
           </div>
         </div>
-        <div class="hero__item set-bg" data-setbg="assets/img/hero/banner.jpg">
-          <div class="hero__text">
-            <span>FRUIT FRESH</span>
-            <h2>Vegetable <br />100% Organic</h2>
-            <p>Free Pickup and Delivery Available</p>
-            <a href="#" class="primary-btn">SHOP NOW</a>
-          </div>
-        </div>
       </div>
     </div>
   </div>
 </section>
 <!-- Hero Section End -->
 
-<!-- Categories Section Begin -->
-<section class="categories">
+<!-- Breadcrumb Section Begin -->
+<section class="breadcrumb-section set-bg" data-setbg="img/breadcrumb.jpg">
   <div class="container">
     <div class="row">
-      <div class="categories__slider owl-carousel">
-        <div class="col-lg-3">
-          <div class="categories__item set-bg" data-setbg="assets/img/categories/cat-1.jpg">
-            <h5><a href="#">Fresh Fruit</a></h5>
-          </div>
-        </div>
-        <div class="col-lg-3">
-          <div class="categories__item set-bg" data-setbg="assets/img/categories/cat-2.jpg">
-            <h5><a href="#">Dried Fruit</a></h5>
-          </div>
-        </div>
-        <div class="col-lg-3">
-          <div class="categories__item set-bg" data-setbg="assets/img/categories/cat-3.jpg">
-            <h5><a href="#">Vegetables</a></h5>
-          </div>
-        </div>
-        <div class="col-lg-3">
-          <div class="categories__item set-bg" data-setbg="assets/img/categories/cat-4.jpg">
-            <h5><a href="#">drink fruits</a></h5>
-          </div>
-        </div>
-        <div class="col-lg-3">
-          <div class="categories__item set-bg" data-setbg="assets/img/categories/cat-5.jpg">
-            <h5><a href="#">drink fruits</a></h5>
+      <div class="col-lg-12 text-center">
+        <div class="breadcrumb__text">
+          <h2>Shopping Cart</h2>
+          <div class="breadcrumb__option">
+            <a href="./index.html">Home</a>
+            <span>Shopping Cart</span>
           </div>
         </div>
       </div>
     </div>
   </div>
 </section>
-<!-- Categories Section End -->
+<!-- Breadcrumb Section End -->
 
-<!-- Featured Section Begin -->
-
-
-
-<section class="featured">
+<!-- Shoping Cart Section Begin -->
+<section class="shoping-cart spad">
   <div class="container">
-    <div class="row featured__filter">
-      <p-carousel
-        [value]="products"
-        [numScroll]="1"
-        [numVisible]="4"
-        [circular]="true"
-        [showIndicators]="false"
-        [autoplayInterval]="5000">
-
-        <ng-template let-product pTemplate="item">
-          <div class="col-lg-3 col-md-4 col-sm-6 mix {{product.category}}">
-            <div class="featured__item">
-              <div class="featured__item__pic set-bg" [ngStyle]="{'background-image': 'url(' + product.imageUrl + ')'}">
-                <ul class="featured__item__pic__hover">
-                  <li><a href="#"><i class="fa fa-heart"></i></a></li>
-<!--                  <li><a href="#"><i class="fa fa-retweet"></i></a></li>-->
-                    <li>
-                        <a [routerLink]="['/details', product.id]">  <!-- Updated link -->
-                            <i class="fa fa-retweet"></i>
-                        </a>
-                    </li>
-                  <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                </ul>
-              </div>
-              <div class="featured__item__text">
-<!--                <h6><a href="#">{{ product.name }}</a></h6>-->
-                <h6><a [routerLink]="['/details', product.id]">{{ product.name }}</a></h6>
-                <h5>{{ product.price | currency: 'VND':'symbol':'1.0-0' }}</h5> <!-- Định dạng giá tiền ở đây -->
-              </div>
-            </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="shoping__cart__table">
+          <table>
+            <thead>
+            <tr>
+              <th class="shoping__product">Products</th>
+              <th>Price</th>
+              <th>Quantity</th>
+              <th>Total</th>
+              <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+              <td class="shoping__cart__item">
+                <img src="assets/img/cart/cart-1.jpg" alt="">
+                <h5>Vegetable’s Package</h5>
+              </td>
+              <td class="shoping__cart__price">
+                $55.00
+              </td>
+              <td class="shoping__cart__quantity">
+                <div class="quantity">
+                  <div class="pro-qty">
+                    <input type="text" value="1">
+                  </div>
+                </div>
+              </td>
+              <td class="shoping__cart__total">
+                $110.00
+              </td>
+              <td class="shoping__cart__item__close">
+                <span class="icon_close"></span>
+              </td>
+            </tr>
+            <tr>
+              <td class="shoping__cart__item">
+                <img src="assets/img/cart/cart-2.jpg" alt="">
+                <h5>Fresh Garden Vegetable</h5>
+              </td>
+              <td class="shoping__cart__price">
+                $39.00
+              </td>
+              <td class="shoping__cart__quantity">
+                <div class="quantity">
+                  <div class="pro-qty">
+                    <input type="text" value="1">
+                  </div>
+                </div>
+              </td>
+              <td class="shoping__cart__total">
+                $39.99
+              </td>
+              <td class="shoping__cart__item__close">
+                <span class="icon_close"></span>
+              </td>
+            </tr>
+            <tr>
+              <td class="shoping__cart__item">
+                <img src="assets/img/cart/cart-3.jpg" alt="">
+                <h5>Organic Bananas</h5>
+              </td>
+              <td class="shoping__cart__price">
+                $69.00
+              </td>
+              <td class="shoping__cart__quantity">
+                <div class="quantity">
+                  <div class="pro-qty">
+                    <input type="text" value="1">
+                  </div>
+                </div>
+              </td>
+              <td class="shoping__cart__total">
+                $69.99
+              </td>
+              <td class="shoping__cart__item__close">
+                <span class="icon_close"></span>
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="shoping__cart__btns">
+          <a href="#" class="primary-btn cart-btn">CONTINUE SHOPPING</a>
+          <a href="#" class="primary-btn cart-btn cart-btn-right"><span class="icon_loading"></span>
+            Upadate Cart</a>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="shoping__continue">
+          <div class="shoping__discount">
+            <h5>Discount Codes</h5>
+            <form action="#">
+              <input type="text" placeholder="Enter your coupon code">
+              <button type="submit" class="site-btn">APPLY COUPON</button>
+            </form>
           </div>
-        </ng-template>
-
-      </p-carousel>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="shoping__checkout">
+          <h5>Cart Total</h5>
+          <ul>
+            <li>Subtotal <span>$454.98</span></li>
+            <li>Total <span>$454.98</span></li>
+          </ul>
+          <a href="#" class="primary-btn">PROCEED TO CHECKOUT</a>
+        </div>
+      </div>
     </div>
   </div>
 </section>
-
-
-
-<!-- Featured Section End -->
-
+<!-- Shoping Cart Section End -->
 
 <!-- Footer Section Begin -->
 <footer class="footer spad">
@@ -340,6 +382,10 @@
             <button type="submit" class="site-btn">Subscribe</button>
           </form>
           <div class="footer__widget__social">
+<!--            <a href="#"><i class="fa fa-facebook"></i></a>-->
+<!--            <a href="#"><i class="fa fa-instagram"></i></a>-->
+<!--            <a href="#"><i class="fa fa-twitter"></i></a>-->
+<!--            <a href="#"><i class="fa fa-pinterest"></i></a>-->
           </div>
         </div>
       </div>
@@ -350,9 +396,10 @@
           <div class="footer__copyright__text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
-          <div class="footer__copyright__payment"><img src="/assets/img/payment-item.png" alt=""></div>
+          <div class="footer__copyright__payment"><img src="assets/img/payment-item.png" alt=""></div>
         </div>
       </div>
     </div>
   </div>
 </footer>
+<!-- Footer Section End -->
