--- a/Front-End-Angular/src/app/module/home/home.component.html
+++ b/Front-End-Angular/src/app/module/home/home.component.html
@@ -89,7 +89,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" [routerLink]="['/orders']">
+                  <a class="nav-link" [routerLink]="['/shoping-cart']">
                     <i class="fa fa-shopping-bag"></i> My Orders
                   </a>
                 </li>
@@ -272,7 +272,10 @@
                             <i class="fa fa-retweet"></i>
                         </a>
                     </li>
-                  <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                  <li><a href="#"><i class="fa fa-shopping-cart"></i></a>
+<!--                  <li><a (click)="addToCart(product)"><i class="fa fa-shopping-cart"></i></a></li>-->
+
+                  <!--                  <li><a (click)="addToCart(product)"><i class="fa fa-shopping-cart"></i></a></li>-->
                 </ul>
               </div>
               <div class="featured__item__text">
